<resources>
    <string name="app_name">Food Runner</string>
    <string name="img_description_logo">Logo</string>
    <string name="hint_mobile_number">Mobile Number (10 digits)</string>
    <string name="hint_password">Password</string>
    <string name="btn_login_txt">Login</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_register_txt">Don\'t have an Account? Sign up now</string>
    <string name="txtInfoText">Enter your registered mobile number and email address below</string>
    <string name="btn_reset_password_txt">Reset Password</string>
    <string name="hint_name">Name (Min 3 characters)</string>
    <string name="hint_email">E-mail Address</string>
    <string name="hint_address">Delivery Address</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_register_txt">Register</string>
    <string name="txt_welcome_string">Welcome, Your entered details ⬇️</string>
</resources>