<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/txt_welcome_string"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txtWelcome"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="@color/dark_green"
        android:text="@string/hint_mobile_number"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txtMobile"
        android:textColor="@color/dark_green"
        android:layout_centerVertical="true"
        android:text="@string/hint_password"
        android:textSize="24sp"
        android:textStyle="bold" />


</RelativeLayout>